# python-trainning

Projects/django-project/: Makefile  db.sqlite3  pyproject.toml
Projects/django-project/api/: serializers.py  urls.py  views.py
Projects/django-project/setup/: settings.py  urls.py
Projects/django-project/templates/: base.html
Projects/django-project/templates/website/: client.html  home.html
Projects/django-project/website/: admin.py  models.py  urls.py  views.py
Projects/django-project/website/migrations/: 0001_initial.py
docker/: README.md  exam.md
docker/day_01/: README.md
docker/day_01/examples/: commands.cheat.sheet.md  commands.md  docker.md  images.md  network.md
docker/day_01/examples/simple_nginx/: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  index.html
docker/day_01/lab_01/: lab_01.md
docker/day_01/lab_02/: index.html  lab_02.md
docker/day_01/lab_03/: Dockerfile  Makefile  entrypoint.sh  lab_03.md
docker/day_01/lab_04/: lab_04.md
docker/day_01/lab_04/fastapi-app/: Dockerfile  Makefile  entrypoint.sh  pyproject.toml
docker/day_02/: README.md
docker/day_02/challenge_01/: challenge_01.md
docker/day_02/challenge_01/proj1/app/: Dockerfile  pyproject.toml
docker/day_02/challenge_01/proj1/app/src/: app.py  config.py  db.py
docker/day_02/examples/: binding.md  docker_compose.md  registry.md  volumes.md
docker/day_02/examples/container/: Makefile
docker/day_02/examples/simple_project/: Makefile  README.md  docker-compose.yaml
docker/day_02/lab_05/: lab_05.md
docker/day_02/lab_05/fastapi-postgresql-app/: docker-compose.yaml
docker/day_02/lab_06/: lab_06.md
docker/day_02/lab_07/: lab_07.md
docker/day_03/: README.md
docker/day_03/challenge_02/: challenge_02.md
docker/day_03/challenge_02/docker-calculator/: .env  Dockerfile  Makefile  calculator.py  docker-compose.yml
docker/day_03/challenge_03/: challenge_03.md
docker/day_03/examples/: args_and_envs.md  lifecycle.md  pruning.md  troubleshooting.md
docker/day_03/lab_08/: lab_08.md
python/day_04/class_playground/src/: main.py
python/day_04/lab_12/src/: lambda_functions.ipynb
python/day_04/playground/: __init__.py  main.py  playground - Shortcut.lnk  pyproject.toml
python/day_05/lab_18/src/: main.py  pyproject.toml
python/day_05/lab_19/src/: main.py  pyproject.toml
python/day_05/pydantic_calculator/: pyproject.toml
python/day_05/pydantic_calculator/src/: main.py  pyproject.toml
python/day_06/challenge_02/proj/: alembic.ini  pyproject.toml
python/day_06/challenge_02/proj/src/: env.py  main.py
python/day_06/lab_20/src/: data_class.py
python/day_07/challenge_03/api-project/: db.sqlite3  pyproject.toml  test-api.http
python/day_07/lab_22/: pyproject.toml
python/day_07/lab_22/api-fastapi/src/: main.py  middleware.py  routers.py
python/day_07/lab_23/api-drf/: db.sqlite3  pyproject.toml
python/day_09/challenge_04/proj-for-test/: pyproject.toml
python/day_09/challenge_04/proj-for-test/app/: account_dispatcher.py
python/day_09/challenge_04/proj-for-test/tests/: test_account_dispatcher.py
python/day_09/lab_27/logger/: logger.py
python/day_10/lab_30/proj-30/: pyproject.toml
python/day_10/lab_31/proj-31/: main.py  pyproject.toml
python/day_10/lab_32/proj-32/: employees.csv  main.ipynb
python/day_11/pandas-exercises/: pandas-exercises.ipynb
(+44 files in other folders)
