[tool.poetry]
name = "lab-22"
version = "0.1.0"
description = ""
authors = ["W1NDCOR3 <diogo.romero.paz@gmail.com>"]
readme = "README.md"

packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.115.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
