[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Diogo Vieira <diogo.romero.paz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
