[tool.poetry]
name = "lab18"
version = "0.1.0"
description = ""
authors = ["Diogo Vieira <diogo.romero.paz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
ruff = "^0.6.7"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
