[tool.poetry]
name = "proj-31"
version = "0.1.0"
description = ""
authors = ["W1NDCOR3 <diogo.romero.paz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
