[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Diogo Vieira <diogo.romero.paz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
uvicorn = "^0.31.0"
python-decouple = "^3.8"
asyncpg = "^0.29.0"
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
